welcome header creation

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,6 +10,7 @@
     --very-papaya: #ff9901;
     --very-black: #000000;
     --price-color: #ff0000;
+    --very-gris: #c9c1c1;
     --white: #FFFFFF;
     --black: #000000;
     --sm: 14px;
