--- a/src/style/style-present.css
+++ b/src/style/style-present.css
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
+    margin-bottom: 50px;
 }
 
 .contain-text {
