--- a/src/style/style.css
+++ b/src/style/style.css
@@ -127,3 +127,24 @@ nav ul li:nth-child(1){
     width: 210px;
     margin: 25px;
 }
+
+/* ----------------------------footer-------------------------- */
+
+.conteinItemFooter {
+    display: flex;
+    width: 80%;
+    height: 85px;
+    background-color: var(--very-papaya);
+    clip-path: polygon(50% 0%, 100% 0, 90% 100%, 0 100%, 0 0);
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-containerFooter {
+    display: flex;
+    width: 100%;
+    height: 85px;
+    justify-content: space-between;
+}
+
+
