--- a/src/style/style.css
+++ b/src/style/style.css
@@ -91,6 +91,10 @@
     clip-path: polygon(50% 0%, 100% 0, 90% 100%, 0 100%, 0 0);
 }
 
+.conteinItem a {
+    color: var(--white);
+}
+
 .item {
     width: 100px;
     height: 100%;
@@ -150,19 +154,14 @@ nav ul li:nth-child(1){
 
 /* ------------------------Shopping Card Secction-------------------------- */
 
-
-h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
-    margin: 0;
-    padding: 0;
-}
-
 ul {
     list-style-type: none;
-}
+} 
 
 a {
     text-decoration: none;
-}
+} 
+
 
 .wrapper {
     display: grid;
@@ -170,30 +169,30 @@ a {
     background-color: var(--very-papaya);
 }
 
-aside { /*DEL INDEX*/
-    padding: 2rem; /*DEL INDEX*/
-    padding-right: 0; /*DEL INDEX*/
-    color: var(--clr-white); /*DEL INDEX*/
-    position: sticky; /*DEL INDEX*/
-    top: 0; /*DEL INDEX*/
-    height: 100vh; /*DEL INDEX*/
-    display: flex; /*DEL INDEX*/
-    flex-direction: column; /*DEL INDEX*/
-    justify-content: space-between; /*DEL INDEX*/
+aside {
+    padding: 2rem;
+    padding-right: 0;
+    color: var(--clr-white);
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between;
 }
 
-.logo {
-    font-weight: 400; /*DEL INDEX*/
-    font-size: 1.3rem; /*DEL INDEX*/
+.texto-footer {
+    color: var(--clr-main-light);
+    font-size: .85rem;
 }
 
-.menu { /*DEL INDEX*/
+.menu { 
     display: flex;
     flex-direction: column;
     gap: .5rem;
 }
 
-.boton-menu { /*DEL INDEX*/ 
+.boton-menu {
     background-color: transparent;
     border: 0;
     color: var(--clr-white);
@@ -207,7 +206,7 @@ aside { /*DEL INDEX*/
     width: 100%;
 }
 
-.boton-menu.active { /*DEL INDEX*/
+.boton-menu.active { 
     background-color: var(--clr-white);
     color: var(--clr-main);
     border-top-left-radius: 1rem;
@@ -215,7 +214,7 @@ aside { /*DEL INDEX*/
     position: relative;
 }
 
-.boton-menu.active::before { /*DEL INDEX*/
+.boton-menu.active::before {
     content: '';
     position: absolute;
     width: 1rem;
@@ -244,13 +243,12 @@ aside { /*DEL INDEX*/
     transform: rotateZ(90deg);
 }
 
-.boton-carrito { /*DEL INDEX*/
+.boton-carrito { 
     margin-top: 2rem;
 }
 
 .numerito {
-    background-color: var(--clr-white);
-    color: var(--clr-main);
+    color: var(--white);
     padding: .15rem .25rem;
     border-radius: .25rem;
 }
@@ -274,7 +272,7 @@ aside { /*DEL INDEX*/
 }
 
 .titulo-principal {
-    color: var(--clr-main);
+    color: var(--very-black);
     margin-bottom: 2rem;
 }
 
@@ -284,12 +282,12 @@ aside { /*DEL INDEX*/
     gap: 1rem;
 }
 
-.producto-imagen { /*DEL INDEX*/
+.producto-imagen { 
     max-width: 100%;
     border-radius: 1rem;
 }
 
-.producto-detalles { /*DEL INDEX*/
+.producto-detalles {
     background-color: var(--clr-main);
     color: var(--clr-white);
     padding: .5rem;
@@ -305,7 +303,7 @@ aside { /*DEL INDEX*/
     font-size: 1rem;
 }
 
-.producto-agregar { /*DEL INDEX*/
+.producto-agregar {
     border: 0;
     background-color: var(--clr-white);
     color: var(--clr-main);
@@ -317,7 +315,7 @@ aside { /*DEL INDEX*/
     transition: background-color .2s, color .2s;
 }
 
-.producto-agregar:hover { /*DEL INDEX*/
+.producto-agregar:hover { 
     background-color: var(--clr-main);
     color: var(--clr-white);
 }
@@ -346,9 +344,9 @@ aside { /*DEL INDEX*/
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--clr-gray);
+    background-color: var(--very-gris);
     color: var(--very-black);
-    padding: .5rem;
+    padding: 0.5rem;
     padding-right: 1.5rem;
     border-radius: 1rem;
 }
@@ -359,13 +357,13 @@ aside { /*DEL INDEX*/
 }
 
 .carrito-producto small {
-    font-size: .75rem;
+    font-size: 0.75rem;
 }
 
 .carrito-producto-eliminar {
     border: 0;
     background-color: transparent;
-    color: var(--clr-red);
+    color: var(--very-black);
     cursor: pointer;
 }
 
@@ -376,7 +374,7 @@ aside { /*DEL INDEX*/
 
 .carrito-acciones-vaciar {
     border: 0;
-    background-color: var(--clr-gray);
+    background-color: var(--very-papaya);
     padding: 1rem;
     border-radius: 1rem;
     color: var(--very-black);
@@ -390,7 +388,7 @@ aside { /*DEL INDEX*/
 
 .carrito-acciones-total {
     display: flex;
-    background-color: var(--clr-gray);
+    background-color: var(--very-gris);
     padding: 1rem;
     color: var(--very-black);
     text-transform: uppercase;
@@ -408,6 +406,12 @@ aside { /*DEL INDEX*/
     cursor: pointer;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+}
+
+.carrito-acciones-comprar:hover {
+    box-shadow: 0 0 40px var(--very-papaya);
+    background: var(--very-black);
+    color: var(--white);
 }
 
 .header-mobile {
